# langchain_careertimes

./: .env  main.py  pyproject.toml
tools/: extract_job_data_llm.py  job_ad_page_render.py  job_urls_scraper.py  page_parser.py  render_extract_page.py  vector_db.py
